--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
 
-        <h1>Hello world 21</h1>
+        <h1>Hello World</h1>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/lib/jquery-1.11.3.min.js"><\/script>')</script>
